libart-config --version now works.

--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,19 @@
 AC_INIT(art_misc.h)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(libart_lgpl,0.0.0)
+
+LIBART_MAJOR_VERSION=0
+LIBART_MINOR_VERSION=0
+LIBART_MICRO_VERSION=0
+LIBART_VERSION=$LIBART_MAJOR_VERSION.$LIBART_MINOR_VERSION.$LIBART_MICRO_VERSION
+
+AC_SUBST(LIBART_MAJOR_VERSION)
+AC_SUBST(LIBART_MINOR_VERSION)
+AC_SUBST(LIBART_MICRO_VERSION)
+AC_SUBST(LIBART_VERSION)
+
+VERSION=$LIBART_VERSION
+
+AM_INIT_AUTOMAKE(libart_lgpl, $VERSION)
 
 AC_PROG_CC
 AC_PROG_CPP
