Checking in some of the antialiased renderer code. However, more aggressive bbox culling is indicated here.

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,11 +13,15 @@ libart_lgpl_la_SOURCES = \
 	art_misc.c \
 	art_rect.c \
 	art_rect_uta.c \
+	art_svp.c \
+	art_svp_render_aa.c \
+	art_svp_vpath.c \
 	art_uta.c \
 	art_uta_ops.c \
 	art_uta_rect.c \
 	art_uta_vpath.c \
-	art_vpath.c
+	art_vpath.c \
+	art_vpath_bpath.c
 
 libart_lgpl_la_LDFLAGS = -version-info @LIBART_VERSION_INFO@
 
@@ -29,11 +33,17 @@ libart_lgplinc_HEADERS = \
 	art_point.h \
 	art_rect.h \
 	art_rect_uta.h \
+	art_svp.h \
+	art_svp_render_aa.h \
+	art_svp_vpath.h \
 	art_uta.h \
 	art_uta_ops.h \
 	art_uta_rect.h \
 	art_uta_vpath.h \
-	art_vpath.h
+	art_vpath.h \
+	art_vpath_bpath.h
+
+INCLUDES = -I$(top_srcdir)/..
 
 DEPS = $(top_builddir)/libart_lgpl.la
 LDADDS = $(top_builddir)/libart_lgpl.la
