No more libart/gdk-pixbuf as part of gnome-libs
* No more libart/gdk-pixbuf as part of gnome-libs

* Everything: Install header files & *Conf.sh in new per-interface-version locations.
Include interface version in library names.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,8 @@ bin_SCRIPTS = \
 
 EXTRA_DIST = 			\
 	libart.m4		\
-	libartConf.sh.in
+	libartConf.sh.in	\
+	libart-config.in
 
 lib_LTLIBRARIES = libart_lgpl.la
 
