A bunch of very minor maintenance changes. The plan is for all these changes to go to gnome-libs-1-0, then I start really branching.

--- a/.cvsignore
+++ b/.cvsignore
@@ -6,6 +6,7 @@ INSTALL
 Makefile
 Makefile.in
 aclocal.m4
+art_config.h
 confdefs.h
 config.cache
 config.guess
@@ -15,7 +16,9 @@ config.log
 config.status
 config.sub
 configure
+gen_art_config
 install-sh
+libart-features.h
 libtool
 ltconfig
 ltmain.sh
