--- a/libartConf.sh.in
+++ b/libartConf.sh.in
@@ -4,3 +4,4 @@
 LIBART_LIBDIR="@LIBART_LIBDIR@"
 LIBART_LIBS="@LIBART_LIBS@"
 LIBART_INCLUDEDIR="@LIBART_INCLUDEDIR@"
+MODULE_VERSION="libart-@VERSION@"
