--- a/configure.in
+++ b/configure.in
@@ -57,7 +57,32 @@ AC_SUBST(LIBART_LIBS)
 
 AC_C_BIGENDIAN
 
+dnl ======================
+dnl = gtk-doc stuff
+dnl ======================
+AC_CHECK_PROG(GTKDOC, gtkdoc-mkdb, true, false)
+AM_CONDITIONAL(HAVE_GTK_DOC, $GTKDOC)
+AC_SUBST(HAVE_GTK_DOC)
+
+dnl Let people disable the gtk-doc stuff.
+AC_ARG_ENABLE(gtk-doc, [  --enable-gtk-doc  Use gtk-doc to build documentation [default=auto]], enable_gtk_doc="$enableval", enable_gtk_doc=auto)
+
+if test x$enable_gtk_doc = xauto ; then
+  if test x$GTKDOC = xtrue ; then
+    enable_gtk_doc=yes
+  else
+    enable_gtk_doc=no
+  fi
+fi
+dnl NOTE: We need to use a separate automake conditional for this
+dnl       to make this work with the tarballs.
+AM_CONDITIONAL(ENABLE_GTK_DOC, test x$enable_gtk_doc = xyes)
+dnl ======================
+dnl = gtk-doc stuff
+dnl ======================
+
 AC_OUTPUT([
 libart-features.h
 Makefile
+doc/Makefile
 libart-config], [case "$CONFIG_FILES" in *libart-config*) chmod +x libart-config;; esac])
