chuuut. fix the documentation comments. add image files for affine
2001-05-20  Mathieu Lacage <mathieu@gnu.org>

	* .cvsignore: chuuut.
	* art_affine.c: (art_affine_invert): fix the documentation comments.
	* doc/Makefile.am: add image files for affine transforms:
	  art-affines.png
	  art-affine-matrix.png
	  art-affine-libart.png
	  dia/art-affine-matrix.dia
	  dia/art-affine-libart.dia
	  dia/art-affines.dia
	* doc/tmpl/art_affine.sgml: document.
	* doc/tmpl/art_gamma.sgml: nothing.
	* doc/tmpl/art_memory.sgml: nothing.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -35,6 +35,9 @@ HTML_IMAGES =				\
 	art-overall-arch.png		\
 	art-data-flow.png		\
 	art-drawing-commands.png	\
+	art-affines.png			\
+	art-affine-matrix.png		\
+	art-affine-libart.png		\
 	art-non-display.tar.gz		\
 	art-display.tar.gz
 
