Mother's day!!! Back in south france (4 hours of train hacking :).
2001-05-27  Mathieu Lacage <mathieu@gnu.org>

	Mother's day!!! Back in south france (4 hours of train hacking :).

	* doc/tmpl/art_memory.sgml: document.
	* doc/tmpl/art_core_construction.sgml: document.
	* doc/dia/art-2d-space.dia: add for above doc.
	* doc/art-2d-space.png: add for above doc.
	* doc/tmpl/art_construction_extended.sgml: document.
	* doc/dia/art-dash-style.dia: add for above doc.
	* doc/art-dash-style.png: add for above doc.
	* doc/tmpl/art_construction_trans.sgml: document.
	* doc/Makefile.am: add image files in there.
	* doc/libart-sections.txt: remove some functions we
	  do not want to document.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -38,6 +38,8 @@ HTML_IMAGES =				\
 	art-affines.png			\
 	art-affine-matrix.png		\
 	art-affine-libart.png		\
+	art-2d-space.png		\
+	art-dash-style.png		\
 	art-non-display.tar.gz		\
 	art-display.tar.gz
 
@@ -49,7 +51,13 @@ content_files =
 extra_files =				\
 	dia/art-overall-arch.dia	\
 	dia/art-data-flow.dia		\
-	dia/art-drawing-commands.dia
+	dia/art-drawing-commands.dia	\
+	dia/art-2d-space.dia		\
+	dia/art-affines.dia		\
+	dia/art-affine-matrix.dia	\
+	dia/art-affine-libart.dia	\
+	dia/art-dash-style.dia
+
 
 # CFLAGS and LDFLAGS for compiling scan program. Only needed
 # if $(DOC_MODULE).types is non-empty.
