National Day in .fr. I got 23 two days ago :)
2001-07-14  Mathieu Lacage <mathieu@gnu.org>

	National Day in .fr. I got 23 two days ago :)

	* doc/libart-sections.txt: remove art_svp_minus since it
	is not implemented.
	* cleanup doc/dia/art-svp-ops.dia add doc/art-svp-ops.png.
	* add new files to Makefile.am.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -40,8 +40,10 @@ HTML_IMAGES =				\
 	art-affine-libart.png		\
 	art-2d-space.png		\
 	art-dash-style.png		\
+	art-svp-ops.png			\
 	art-non-display.tar.gz		\
-	art-display.tar.gz
+	art-display.tar.gz		\
+	art-dash.tar.gz
 
 # Extra SGML files that are included by $(DOC_MAIN_SGML_FILE)
 content_files =
@@ -56,7 +58,8 @@ extra_files =				\
 	dia/art-affines.dia		\
 	dia/art-affine-matrix.dia	\
 	dia/art-affine-libart.dia	\
-	dia/art-dash-style.dia
+	dia/art-dash-style.dia		\
+	dia/art-svp-ops.dia
 
 
 # CFLAGS and LDFLAGS for compiling scan program. Only needed
