Rewrote a bunch of it, fixed a number of XXXs
2001-08-08  Mathieu Lacage <mathieu@gnu.org>

	Rewrote a bunch of it, fixed a number of XXXs

	* doc/libart.sgml: fix number of stuff.
	* doc/dia/art-coverage-calculus.dia,
	  doc/art-coverage-calculus.png:
	  add new diagram.

2001-08-05  Mathieu Lacage <mathieu@gnu.org>

	Vacations are cool :)

	* doc/libart.sgml: add documentation on the renderer internals.
	* doc/tmpl/*.sgml: fix misc typos.
	* doc/dia/art-oversampling.dia
	  doc/dia/art-winding-number.dia
	  doc/dia/art-svp-vpath.dia
	  doc/art-oversampling.png
	  doc/art-svp-vpath.png
	  doc/art-winding-number.png:
	  add new diagrams and png versions for the internals of the
	  renderer.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -41,6 +41,10 @@ HTML_IMAGES =				\
 	art-2d-space.png		\
 	art-dash-style.png		\
 	art-svp-ops.png			\
+	art-oversampling.png		\
+	art-winding-number.png		\
+	art-svp-vpath.png		\
+	art-coverage-calculus.png	\
 	art-non-display.tar.gz		\
 	art-display.tar.gz		\
 	art-dash.tar.gz
@@ -59,7 +63,11 @@ extra_files =				\
 	dia/art-affine-matrix.dia	\
 	dia/art-affine-libart.dia	\
 	dia/art-dash-style.dia		\
-	dia/art-svp-ops.dia
+	dia/art-svp-ops.dia		\
+	dia/art-svp-vpath.dia		\
+	dia/art-winding-number.dia	\
+	dia/art-oversampling.dia	\
+	dia/art-coverage-calculus.dia
 
 
 # CFLAGS and LDFLAGS for compiling scan program. Only needed
