--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -146,7 +146,7 @@ tmpl.stamp: tmpl-build.stamp
 
 #### sgml ####
 
-sgml-build.stamp: tmpl.stamp $(CFILE_GLOB) tmpl/*.sgml
+sgml-build.stamp: tmpl.stamp $(CFILE_GLOB)
 	@echo '*** Building SGML ***'
 	cd $(srcdir) && \
 	gtkdoc-mkdb --module=$(DOC_MODULE) --source-dir=$(DOC_SOURCE_DIR) $(MKDB_OPTIONS)
