move gnome.h to includedir/gnome-1.0
2001-09-13  Havoc Pennington  <hp@redhat.com>

        * Makefile.am (gnomeincludedir): move gnome.h to includedir/gnome-1.0

        * libgnorba/Makefile.am (libgnorbaincludedir): move to
        includedir/gnome-1.0

        * configure.in (GNOME_INCLUDEDIR): change to includedir/gnome-1.0

--- a/Makefile.am
+++ b/Makefile.am
@@ -56,7 +56,7 @@ libart_lgpl_la_SOURCES = \
 libart_lgpl_la_LDFLAGS = -version-info @LIBART_VERSION_INFO@
 libart_lgpl_la_LIBADD = -lm
 
-libart_lgplincdir = $(includedir)/libart_lgpl
+libart_lgplincdir = $(includedir)/gnome-1.0/libart_lgpl
 libart_lgplinc_HEADERS = \
 	art_affine.h \
 	art_alphagamma.h \
