Set LIBART_INCLUDEDIR to match Makefile.am. Also put the -lm in here too.
	* configure.in: Set LIBART_INCLUDEDIR to match Makefile.am.
	Also put the -lm in here too.
	* libart-config.in: Use LIBART_INCLUDEDIR instead of includedir
	and use LIBART_LIBDIR and LIBART_LIBS instead of hard-coding the
	list of libraries.

--- a/configure.in
+++ b/configure.in
@@ -48,8 +48,8 @@ fi
 changequote([,])dnl
 
 LIBART_LIBDIR='-L${libdir}'
-LIBART_INCLUDEDIR='-I${includedir}'
-LIBART_LIBS='-lart_lgpl'
+LIBART_INCLUDEDIR='-I${includedir}/gnome-1.0'
+LIBART_LIBS='-lart_lgpl -lm'
 
 AC_SUBST(LIBART_LIBDIR)
 AC_SUBST(LIBART_INCLUDEDIR)
