--- a/libart-config.in
+++ b/libart-config.in
@@ -4,7 +4,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 exec_prefix_set=no
 includedir=@includedir@
-includedir=@libdir@
+libdir=@libdir@
 
 usage="\
 Usage: libart-config [--prefix[=DIR]] [--exec-prefix[=DIR]] [--version] [--libs] [--cflags]"
