--- a/configure.in
+++ b/configure.in
@@ -22,9 +22,27 @@ AC_ARG_ENABLE(ansi, [  --enable-ansi           turn on strict ansi [default=no]]
 
 AC_PROG_CC
 AC_PROG_CPP
+AC_LIBTOOL_WIN32_DLL
 AM_PROG_LIBTOOL
 
 AM_MAINTAINER_MODE
+
+AC_MSG_CHECKING([for Win32])
+case "$host" in
+  *-*-mingw*)
+    os_win32=yes
+    ;;
+  *)
+    os_win32=no
+    ;;
+esac
+AC_MSG_RESULT([$os_win32])
+AM_CONDITIONAL(OS_WIN32, test "$os_win32" = "yes")
+
+if test "$os_win32" = "yes"; then
+  AC_CHECK_PROG(ms_librarian, lib.exe, yes, no)
+fi
+AM_CONDITIONAL(MS_LIB_AVAILABLE, test x$ms_librarian = xyes)
 
 changequote(,)dnl
 if test "x$GCC" = "xyes"; then
@@ -68,4 +86,5 @@ AC_OUTPUT([
 libart-features.h
 Makefile
 libart-config
-libart-2.0.pc], [case "$CONFIG_FILES" in *libart-config*) chmod +x libart-config;; esac])
+libart-2.0.pc
+libart-zip], [case "$CONFIG_FILES" in *libart-config*) chmod +x libart-config;; esac])
