Some nitpicking changes for Win32:
2003-08-14  Tor Lillqvist  <tml@iki.fi>

	Some nitpicking changes for Win32:

	* libart-features.h.in: Declare the variables from the library as
	dlimport/dllexport on Win32.

	* Makefile.am: Don't use -lm on Win32. Use the libart.def file.

	* makefile.msc: Update to generate same name DLL and import
	library as auto* and libtool. Add missing objects. (But dunno if
	it is useful to maintain this file. It isn't distributed in the
	source tarballs (should it be?). And, if it were distributed, and
	the intention was to support random people really building libart
	with MSVC, one should distribute also prebuilt config.h(.win32)
	and libart-features.h(.win32) files.)

	* libart-zip.in (DEVZIP): Fix typo.
	(DLLDIR): libtool 1.5 installs DLLs in $(prefix)/bin, so look
	there, too.

	* libart.def: Add missing entry points.

	* testuta.c: To check that the export/import of the version
	variables work, print out them in a comment. Undefine
	LIBART_COMPILATION before including libart-features.h.

--- a/libart-features.h.in
+++ b/libart-features.h.in
@@ -6,8 +6,18 @@
 #define LIBART_MICRO_VERSION (@LIBART_MICRO_VERSION@)
 #define LIBART_VERSION "@LIBART_VERSION@"
 
-extern const unsigned int libart_major_version, libart_minor_version, libart_micro_version;
-extern const char *libart_version;
+#ifdef _WIN32
+#  ifdef LIBART_COMPILATION
+#    define LIBART_VAR __declspec(dllexport)
+#  else
+#    define LIBART_VAR extern __declspec(dllimport)
+#  endif
+#else
+#  define LIBART_VAR extern
+#endif
+
+LIBART_VAR const unsigned int libart_major_version, libart_minor_version, libart_micro_version;
+LIBART_VAR const char *libart_version;
 
 void libart_preinit(void *app, void *modinfo);
 void libart_postinit(void *app, void *modinfo);
