--- a/libart-zip.in
+++ b/libart-zip.in
@@ -3,12 +3,16 @@
 # Build zipfiles for libart_lgpl on Win32, runtime and developer.
 
 ZIP=/tmp/libart_lgpl-@LIBART_VERSION@.zip
-DEVZIP=/tmp/libart_lgpl-@LIBART_VERSION@.zip
+DEVZIP=/tmp/libart_lgpl-dev-@LIBART_VERSION@.zip
 cd @prefix@
 
 rm $ZIP
+
+DLLDIR=lib
+[ -f bin/libart_lgpl_2-@LIBART_MAJOR_VERSION@.dll ] && DLLDIR=bin
+
 zip -r $ZIP -@ <<EOF
-lib/libart_lgpl_2-@LIBART_MAJOR_VERSION@.dll
+$DLLDIR/libart_lgpl_2-@LIBART_MAJOR_VERSION@.dll
 EOF
 
 rm $DEVZIP
