--- a/Makefile.am
+++ b/Makefile.am
@@ -17,6 +17,8 @@ lib_LTLIBRARIES = libart_lgpl_2.la
 if OS_WIN32
 no_undefined = -no-undefined
 
+export_symbols = -export-symbols libart.def
+
 install-libtool-import-lib:
 	$(INSTALL) .libs/libart_lgpl_2.dll.a $(DESTDIR)$(libdir)
 uninstall-libtool-import-lib:
@@ -24,6 +26,8 @@ uninstall-libtool-import-lib:
 else
 install-libtool-import-lib:
 uninstall-libtool-import-lib:
+
+libm = -lm
 endif
 
 if MS_LIB_AVAILABLE
@@ -36,7 +40,7 @@ uninstall-ms-lib:
 	-rm $(DESTDIR)$(libdir)/art_lgpl_2.lib
 
 art_lgpl_2.lib : libart_lgpl_2.la
-	lib -name:libart_lgpl_2-@LIBART_MAJOR_VERSION@.dll -def:.libs/libart_lgpl_2-@LIBART_MAJOR_VERSION@.dll-def -out:$@
+	lib -name:libart_lgpl_2-@LIBART_MAJOR_VERSION@.dll -def:libart.def -out:$@
 
 else
 install-ms-lib:
@@ -86,8 +90,8 @@ libart_lgpl_2_la_SOURCES = \
 	art_vpath_svp.c	\
 	libart-features.c
 
-libart_lgpl_2_la_LDFLAGS = -version-info @LIBART_VERSION_INFO@ $(no_undefined)
-libart_lgpl_2_la_LIBADD = -lm
+libart_lgpl_2_la_LDFLAGS = -version-info @LIBART_VERSION_INFO@ $(no_undefined) $(export_symbols)
+libart_lgpl_2_la_LIBADD = $(libm)
 
 libart_lgplincdir = $(includedir)/libart-2.0/libart_lgpl
 libart_lgplinc_HEADERS = \
@@ -144,12 +148,12 @@ LDADDS = $(top_builddir)/libart_lgpl_2.la
 testart_SOURCES=testart.c
 testart_LDFLAGS =
 testart_DEPENDENCIES = $(DEPS)
-testart_LDADD = $(LDADDS) -lm
+testart_LDADD = $(LDADDS) $(libm)
 
 testuta_SOURCES=testuta.c
 testuta_LDFLAGS =
 testuta_DEPENDENCIES = $(DEPS)
-testuta_LDADD = $(LDADDS) -lm
+testuta_LDADD = $(LDADDS) $(libm)
 
 tests:	testart testuta
 
