Add uninstalled pkg-config file.
2004-03-04  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am, configure.in, libart-2.0-uninstalled.pc.in:
	Add uninstalled pkg-config file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,7 +10,8 @@ art_config.h:	gen_art_config
 
 EXTRA_DIST = 			\
 	libart-config.in	\
-	libart-2.0.pc.in
+	libart-2.0.pc.in	\
+	libart-2.0-uninstalled.pc.in
 
 lib_LTLIBRARIES = libart_lgpl_2.la
 
